Fix a potential crash when registering an action

GlobalShortcutsRegistry::createServiceActionComponent() may return
nullptr if it's fed bad data.

BUG: 477949